# msc-ort-uy-thesis

./: .gitignore  LICENSE  Makefile  README.md
adicional/langgraph/: environmental-langgraph.py  langgraph_rag_agent_llama3_local (1).ipynb
services/graph-generation/: Makefile  pyproject.toml
services/graph-generation/baseline_rag_storage/: default__vector_store.json  docstore.json  index_store.json
services/graph-generation/data/: defensa-extract.docx  defensa-extract.txt
services/graph-generation/free_form_storage/: default__vector_store.json  property_graph_store.json
services/graph-generation/notebooks/: schemas.ipynb
services/graph-generation/src/: index.py  main.py  models.py  schemas.py  utils.py
services/graph-generation/storage/: default__vector_store.json  docstore.json  index_store.json  property_graph_store.json
services/graph-generation/storage_defensa_test/: default__vector_store.json  docstore.json  index_store.json  property_graph_store.json
services/project-compliance/: .gitignore  Makefile  pyproject.toml
services/project-compliance/data/: lorem-ipsum.txt
services/project-compliance/notebooks/: commands.ps1  evaluation-pipeline.ipynb  project-compliance-validation.xlsx  project-compliance-validation_test.xlsx  project-compliance.ipynb  requirements.txt
services/project-compliance/src/: config.py  index.py  main.py  question_generator.py
services/project-compliance/storage/: docstore.json  index_store.json
services/question-generator/: .gitignore  Makefile  pyproject.toml
services/question-generator/notebooks/: commands.ps1  (+3 more)
(+15 files in other folders)
